--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
 	"config": {
 		"myself": "thomas@criscione.fr",
-		"units": "H",
+		"units": "M",
 		"timeMail": "2",
 		"timeLastCall": "1",
 		"timeSOS": "1",
