--- a/config.json
+++ b/config.json
@@ -1,8 +1,9 @@
 {
 	"config": {
 		"myself": "thomas@criscione.fr",
-		"units": "M",
-		"timeMail": "10",
+		"log": "/var/www/amidead/log",
+		"units": "H",
+		"timeMail": "2",
 		"timeLastCall": "1",
 		"timeSOS": "1",
 		"url": "https://dead.00011100.org",
