--- a/config.json
+++ b/config.json
@@ -6,6 +6,6 @@
 		"timeLastCall": "10",
 		"timeSOS": "10",
 		"url": "https://dead.00011100.org",
-		"recipient": "benoit@neviani.fr"
+		"recipient": "youSO@alive.org"
 	}
 }
